; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_workq_deallocate_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_workq_deallocate_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.workqueue = type { i32 }

@thread_terminate_lock = common dso_local global i32 0, align 4
@workq_deallocate_queue = common dso_local global i32 0, align 4
@thread_terminate_queue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @workq_deallocate_enqueue(%struct.workqueue* %0) #0 {
  %2 = alloca %struct.workqueue*, align 8
  %3 = alloca i32, align 4
  store %struct.workqueue* %0, %struct.workqueue** %2, align 8
  %4 = call i32 (...) @splsched()
  store i32 %4, i32* %3, align 4
  %5 = call i32 @simple_lock(i32* @thread_terminate_lock)
  %6 = load %struct.workqueue*, %struct.workqueue** %2, align 8
  %7 = ptrtoint %struct.workqueue* %6 to i32
  %8 = call i32 @enqueue_tail(i32* @workq_deallocate_queue, i32 %7)
  %9 = call i32 @simple_unlock(i32* @thread_terminate_lock)
  %10 = call i32 @thread_wakeup(i32 ptrtoint (i32* @thread_terminate_queue to i32))
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @splx(i32 %11)
  ret void
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @simple_lock(i32*) #1

declare dso_local i32 @enqueue_tail(i32*, i32) #1

declare dso_local i32 @simple_unlock(i32*) #1

declare dso_local i32 @thread_wakeup(i32) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
